direccionamiento del header corregido y trabajando en el frontend de ver estudiantes

--- a/index.html
+++ b/index.html
@@ -15,15 +15,27 @@
 <body> 
 <header> 
     <!--Navigation bar-->
-<div id="nav-placeholder">
+<!-- <div id="nav-placeholder">
 
-</div>
+</div> -->
 
-<script>
+<nav class="navBar">
+    <img src="https://i.postimg.cc/Cxn1GNj7/96782cb637ec4be985f0fd29d2f6b93c-3.png">
+      <p>MasterTis</p>
+
+    <ul>       
+      <a class="paginap" href="./public/paginaPrincipal.html">Pagina Principal</a>
+      <a class="iniSesion" href="./public/">Iniciar Sesion</a>
+      <a class="cerrarSesion" href="./public/">Cerrar Sesion</a>
+      
+    </ul>
+</nav>
+
+<!-- <script>
 $(function(){
   $("#nav-placeholder").load("./public/navbar.html");
 });
-</script>
+</script> -->
 <!--end of Navigation bar-->
 </header> 
 
