--- a/public/footer.html
+++ b/public/footer.html
@@ -1,13 +1,16 @@
 <style>
 .footer {
  position:relative;
-   bottom:10;
+   bottom:0;
    width:100%;
-   height:60px; 
+   height:100px; 
   background-color: #373737;
   color: white;
-  text-align: center;
+  /* text-align: center; */
   font-family: 'Fjalla One';
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 </style>
 
