navBar modificado e interfaz de ver estudiantes de grupo empresas desarrollado

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,8 +1,14 @@
         <nav class="navBar">
-            <img src="https://i.postimg.cc/Cxn1GNj7/96782cb637ec4be985f0fd29d2f6b93c-3.png">
-              <p>MasterTis</p>
+            <div class="navBar-logo-and-title">
+              <!-- <img src="https://i.postimg.cc/Cxn1GNj7/96782cb637ec4be985f0fd29d2f6b93c-3.png"> -->
+              <!-- <img src="../img/logo.png" alt=""> -->
+              <!-- <img src="https://img.icons8.com/office/80/000000/working-with-a-laptop.png"/> -->
+              <img src="../img/logo-lap-m.png"/>
+              <img src="../img/logo-lap-h.png"/>
+              <p class="navBar-title">MasterTis</p>
+            </div>
 
-            <ul>       
+            <ul class="navBar-list">       
               <a class="paginap" href="./paginaPrincipal.html">Pagina Principal</a>
               <a class="iniSesion" href="./login.html">Iniciar Sesion</a>
               <a class="cerrarSesion" href="./cerrarSesion.html">Cerrar Sesion</a>
