--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -52,7 +52,7 @@
             <a href="./DocenteRevisaGrupos.html" class="sidebar-item">Revisar grupos de la clase</a>
             <a href="./docenteCalificaGrupos.html" class="sidebar-item">Calificar grupos</a>
             <a href="./docenteCalificaNotasFinales.html">Asignar notas finales</a>
-            <a href="./infoClases.html" class="sidebar-item">Ver clases</a>
+            <a href="./infoGrupoEmpresas.html" class="sidebar-item">Ver grupo empresas</a>
             <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
   </div>
 </div>
