--- a/public/footer.html
+++ b/public/footer.html
@@ -1,9 +1,10 @@
 <style>
 .footer {
  position:relative;
-   bottom:0;
-   width:100%;
-   height:100px; 
+ margin-top: 40px;
+  bottom:0;
+  width:100%;
+  height:100px; 
   background-color: #373737;
   color: white;
   /* text-align: center; */
