se agrego la funcionalidad de publicar apuntes y recuperar apuntes

--- a/public/estudianteRevisaApuntesClase.html
+++ b/public/estudianteRevisaApuntesClase.html
@@ -65,14 +65,15 @@ $(function(){
           <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
           <a href="./estudianteRevisaApuntesClase.html" class="sidebar-item">Apuntes</a>
        </li>
+
       </ul>
     </div>
    
-    <div id="datos-Miempresa">
-    </div>
+    <div id="apuntes"></div>
+
   </div>
 
-  <script src="../scripts/consultarEstudiantePerteneceAEmpresa.js"></script>
+  <script src="../scripts/recuperarApuntes.js"></script>
   <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
 </html>
