--- a/public/tareas.html
+++ b/public/tareas.html
@@ -63,17 +63,14 @@ $(function(){
               Tareas
             </a>
           </li>
-
-          <li>
-            <a href="./tareas.html" class="sidebar-item">
-              <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
-              Ver grupo empresas
-            </a>
-          </li>
           <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
             <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
          </li>
+         <li>
+          <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+          <a href="./estudianteRevisaApuntesClase.html" class="sidebar-item">Apuntes</a>
+       </li>
         </ul>
       </div>
 
