--- a/public/estudianteCreaApunte.html
+++ b/public/estudianteCreaApunte.html
@@ -4,75 +4,62 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style-navbar.css">
-  <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
+  <link rel="stylesheet" href="../styles/style-header.css">
+  <link rel="stylesheet" href="../styles/style-form.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-  <title>Document</title>
+   <title>Crear Grupo-Empresa</title>
 </head>
 <body>
-  <header>
-    <nav class="navBar">
-        <!--<h1>MasterTis</h1>
-           <ul>              
+    <header>
+      <nav class="navBar">
+        <h1>APOYO A LA EMPRESA TIS</h1>
+           <ul>
             <a class="itemNav" href="../index.html">Pagina principal</a>
             <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
            </ul>
-        </nav>-->
-<!--Navigation bar-->
-<div id="nav-placeholder">
-
-</div>
-
-<script>
-$(function(){
-  $("#nav-placeholder").load("navbar.html");
-});
-</script>
-<!--end of Navigation bar-->
-
-   </header>
-
-   <div class="flex-body"> 
-
-    <div class="sidebar">
-      <ul class="sidebar-list">
-        <li>
+        </nav>
+    </header>
+    <div class="flex-body"> 
+      <div class="sidebar">
+        <!-- <h2 class="sidebar-title">Navegación</h2> -->
+        <ul class="sidebar-list">
+          <li>
             <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
             <a href="./perfil.html" class="sidebar-item">Perfil</a>
-        </li>
-        <li>
+          </li>
+          <li>
             <img src="https://img.icons8.com/ios/100/000000/file-2.png"/>
             <a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a>
-        </li>
-        <li>
+          </li>
+          <li>
             <img src="https://img.icons8.com/ios/100/000000/task.png"/>
             <a href="./tareas.html" class="sidebar-item">Tareas</a>
-        </li>
+          </li>
 
-        <li>
-           <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
-           <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
-        </li>
-        <li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+            <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
+         </li>
+         <li>
           <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
           <a href="./estudianteRevisaApuntesClase.html" class="sidebar-item">Apuntes</a>
        </li>
-      </ul>
-    </div>
-   
-    <div id="datos-Miempresa">
-    </div>
-  </div>
+    
+        </ul>
+      </div>
+ 
 
-  <script src="../scripts/consultarEstudiantePerteneceAEmpresa.js"></script>
-  <script src="../scripts/verificarSesionEstudiante.js"></script>
+      <div id="espacio-empresa"> </div>
+
+</div> 
+<script src="../scripts/llenarCampoMiEmpresa.js"></script>
+<script src="../scripts/verificarSesionEstudiante.js"></script>
+
+
 </body>
 </html>
