--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -60,12 +60,12 @@ $(function(){
 
           <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
-            <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
-          </li>
-          <li>
-            <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
             <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
          </li>
+         <li>
+          <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+          <a href="./estudianteRevisaApuntesClase.html" class="sidebar-item">Apuntes</a>
+       </li>
   
         </ul>
       </div>
