--- a/public/empresaEstudiante.html
+++ b/public/empresaEstudiante.html
@@ -71,10 +71,10 @@ $(function(){
     <div id="datos-Miempresa">
     </div>
 
-    <div id="modal-cambio-rol" >
+    <div id="modal-cambio-rol" hidden="true" >
       <div class="contenido-modal">
          <div class="cabecera-modal"><h3>Cambiar rol</h3></div>
-             <form id="formulario-modal">
+             <form id="formulario-cambio-rol">
                 <p>Código sis del alumno:</p>
                 <input type="text" name="codigoSis" id="codigoSis" readonly>
                 <p>Nombre del alumno:</p>
@@ -88,7 +88,7 @@ $(function(){
                 <div id="mensaje"></div>
                 <br>
                 <button type="submit" >Registrar nota</button>
-                <button type="button" id="boton-cancelar">Cancelar</button>
+                <button type="button" id="boton-cerrar-cambio-rol">Cancelar</button>
              </form>
       </div>
   </div>
@@ -100,9 +100,9 @@ $(function(){
 
   </div>
 
-  
-  <script src="../scripts/consultarEstudiantePerteneceAEmpresa.js"></script>
   <script src="../scripts/estudianteCambiarRolMiembroGrupo.js"></script>
+  <script src="../scripts/consultarEstudiantePerteneceAEmpresa.js"></script>
+
   <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
 </html>
