se corrigieron errores esteticos del nav bar

--- a/public/estudianteRevisaApuntesClase.html
+++ b/public/estudianteRevisaApuntesClase.html
@@ -19,26 +19,26 @@
 </head>
 <body>
   <header>
-    <nav class="navBar">
-        <!--<h1>MasterTis</h1>
-           <ul>              
-            <a class="itemNav" href="../index.html">Pagina principal</a>
-            <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-           </ul>
-        </nav>-->
-<!--Navigation bar-->
+    <!--<nav class="navBar">
+      <h1>MasterTis</h1>
+         <ul>
+          <a class="itemNav" href="../index.html">Pagina principal</a>
+          <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
+         </ul>
+    </nav>-->
+
+    <!--Navigation bar-->
 <div id="nav-placeholder">
 
 </div>
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("navbar.html");
+$("#nav-placeholder").load("navbar.html");
 });
 </script>
 <!--end of Navigation bar-->
-
-   </header>
+</header>
 
    <div class="flex-body"> 
 
@@ -68,7 +68,7 @@ $(function(){
 
       </ul>
     </div>
-   
+    
     <div id="apuntes"></div>
 
   </div>
