--- a/public/estudianteRevisaApuntesClase.html
+++ b/public/estudianteRevisaApuntesClase.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles/style-navbar.css">
   <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
+  <link rel="stylesheet" href="../styles/styles-apuntes.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
   <!-- Google fonts -->
