avance en backend para visualizar estudiantes y backend de ver grupos terminado

--- a/public/infoGrupoEmpresas.html
+++ b/public/infoGrupoEmpresas.html
@@ -42,45 +42,14 @@
 
     <main class="main">
         <h2 class="main-title">Grupo Empresas</h2>
-        <section class="main-section">
-            <h2 class="main-section-title-group">Flores Villarroel Corina</h2>
+        <section id="main-section" class="main-section">
+            <!-- <h2 class="main-section-title-group">Flores Villarroel Corina</h2>
             <div class="main-section-group">
                 <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
                     <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
                     <p class="main-card-name">Paya Software</p>
                 </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-            </div>
-            <h2 class="main-section-title-group">Blanco Coca Leticia</h2>
-            <div class="main-section-group">
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-                <a class="main-clase-card" href="./detalleGrupoEmpresa.html">
-                    <img src="https://i.postimg.cc/D0qqChkv/linux-avatar.jpg" alt="">
-                    <p class="main-card-name">Paya Software</p>
-                </a>
-            </div>
+            </div> -->
         </section>
     </main>
 
@@ -95,5 +64,7 @@
         });
         </script>
     </footer>
+    
+    <script src="../scripts/recuperarGrupoEmpresas.js"></script>
 </body>
 </html>
