--- a/public/formularioPliego.html
+++ b/public/formularioPliego.html
@@ -77,7 +77,7 @@ $(function(){
         <div id="espacio-mensajed"> </div>
 
         <h2>Adjunte el documento del Pliego(pdf)</h2>
-        <input class="input-file" type="file" name="file" >
+        <input class="input-file" type="file" name="file" id="pdf-pli" >
         <hr>
             <div id="espacio-mensaje"> </div>
         <hr>
@@ -87,8 +87,15 @@ $(function(){
 <br><br><br>
     </div>
   </div>>
-  <script src="../scripts/verificarSesionDocente.js"></script>
+
+<!-- firebase storage -->
+<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-storage.js"></script>
+<script src="../conexionFirebase/conexionFirebase.js"></script>
+
+<script src="../scripts/verificarSesionDocente.js"></script>
 <script src="../scripts/publicarPliego.js"></script>
+
 
 </body>
 <!--Footer-->
