mostrando todos los integrantes junto a la grupo empresa, falta listar todos los integerantes

--- a/public/infoGrupoEmpresas.html
+++ b/public/infoGrupoEmpresas.html
@@ -9,12 +9,14 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" href="../styles/style-navbar.css">
   <link rel="stylesheet" href="../styles/style-infoGrupoEmpresas.css">
+  <link rel="stylesheet" href="../styles/style-detalleGrupoEmpresa.css">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-   <title>Grupo Empresas</title>
+  <script defer src="../scripts/listaEstudiantes.js"></script>
+    <title>Grupo Empresas</title>
 </head>
 <body>
     <header>
