--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -52,6 +52,8 @@
             <a href="./DocenteRevisaGrupos.html" class="sidebar-item">Revisar grupos de la clase</a>
             <a href="./docenteCalificaGrupos.html" class="sidebar-item">Calificar grupos</a>
             <a href="./docenteCalificaNotasFinales.html">Asignar notas finales</a>
+            <a href="./docenteRevisaAsistencias.html">Resumen de asistencias</a>
+
             <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
   </div>
 </div>
