se restringieron rutas para los diferentes niveles

--- a/public/crearApunte.html
+++ b/public/crearApunte.html
@@ -75,7 +75,7 @@ $("#nav-placeholder").load("navbar.html");
              <h2>La proxima clase se vera:</h2>
              <textarea class="input-description" name="veremos" cols="30" rows="3"></textarea>
             <br>     
-            <button type="submit" name="botonFormulario">guardarApunte</button>
+            <button type="submit" name="botonFormulario">guardar apunte</button>
            </form>
 
            <div id="espacio-mensaje-apunte"></div>
