--- a/public/detalleGrupoEmpresa.html
+++ b/public/detalleGrupoEmpresa.html
@@ -96,4 +96,6 @@
         </script>
     </footer>
 </body>
+<script src="../scripts/recuperarIntegranteGrupo.js"></script>
+<script src="../scripts/verificarSesionDocente.js"></script>
 </html>
