--- a/public/crearGrupoEmpresa.html
+++ b/public/crearGrupoEmpresa.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style-header.css">
-  <link rel="stylesheet" href="../styles/style-form.css">
+  <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <link rel="stylesheet" href="../styles/style-navbar.css">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-   <title>Crear Grupo-Empresa</title>
+  <title>Crear Grupo-Empresa</title>
 </head>
 <body>
     <header>
-      <nav class="navBar">
-        <h1>APOYO A LA EMPRESA TIS</h1>
-           <ul>
-            <a class="itemNav" href="../index.html">Pagina principal</a>
-            <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-           </ul>
-        </nav>
+      <div id="nav-placeholder">
+
+      </div>
+      
+      <script>
+      $(function(){
+      $("#nav-placeholder").load("navbar.html");
+      });
+      </script>
     </header>
     <div class="flex-body"> 
       <div class="sidebar">
