--- a/public/infoGrupoEmpresas.html
+++ b/public/infoGrupoEmpresas.html
@@ -95,5 +95,7 @@
         });
         </script>
     </footer>
+    <script src="../scripts/recuperarGrupoEmpresas.js"></script>
+    <script src="../scripts/verificarSesionDocente.js"></script>
 </body>
 </html>
