Resumen de asistencias

--- a/public/DocenteRevisaGrupos.html
+++ b/public/DocenteRevisaGrupos.html
@@ -49,7 +49,7 @@ $(function(){
       </header>
 
 
-  <div id="espacio-botones-seleccion-grupo">
+  <div id="espacio-botones-seleccion-grupo"style=" align-items: center;padding-left: 35px;   justify-content: center; ">
   </div>
 
     <div id="modal-rol" hidden="true">
