--- a/public/docenteCalificaGrupos.html
+++ b/public/docenteCalificaGrupos.html
@@ -57,7 +57,7 @@
   <!--end of Navigation bar-->
 </header>
 
-<div id="espacio-listado-alumnos">
+<div id="espacio-listado-semanal"style=" align-items: center;padding-left: 35px;   justify-content: center; ">
   <!-- si es final del semestre entonces podra subir las notas finale, sino le dira que no puede -->
   </div>
 <div id="modal-nota-semanal" hidden="true">
@@ -73,12 +73,11 @@
                 <option value="P">Presente</option>
                 <option value="T">Tarde</option>
                 <option value="A">Ausente</option>
-              </select>                <br>
+              </select>                
               <p>Nota</p>
               <input type="text" name="nota" id="nota">
-              <br>
+              
               <div id="mensaje"></div>
-              <br>
               <button type="submit" >Registrar</button>
               <button type="button" id="boton-cancelar">Cancelar</button>
            </form>
