--- a/public/docenteRevisaAsistencias.html
+++ b/public/docenteRevisaAsistencias.html
@@ -57,19 +57,17 @@
   <!--end of Navigation bar-->
 </header>
 
-<div id="espacio-listado-alumnos">
+     <h3>Resumen de Asistencias Por Alumno</h3>
+  <div id="asistencia-alumno"style=" align-items: center;padding-left: 35px;   justify-content: center; ">
   </div>
 
+  <h3>Resumen de Promedio de Notas por Alumno</h3>
+  <div id="notas-alumno"style=" align-items: center;padding-left: 35px;   justify-content: center; ">
 
-      </div>
-     
-  <div id="espacio-listado-alumno">
-
-  </div>
-    
+  </div> 
 
 
-</div>
+
 <script type="module" src="../scripts/obtenerAsistencias.js"></script>
 
  <script src="../scripts/verificarSesionDocente.js"></script>
