revisión para presentar lunes 13 diciembre realizada

--- a/public/DocenteRevisaGrupos.html
+++ b/public/DocenteRevisaGrupos.html
@@ -62,7 +62,7 @@ $(function(){
                 <input type="text" name="nombreAlumno" id="nombre" readonly>
                 <p>Rol</p>
                 <select name="nuevoRol" >
-                <option value="representante">Representante legal</option>
+                <option value="representante legal">Representante legal</option>
                 <option value="estudiante">Estudiante</option>
                 <option value="documentador">Documentador</option>
               </select>                <br>
