--- a/public/docenteCalificaNotasFinales.html
+++ b/public/docenteCalificaNotasFinales.html
@@ -77,7 +77,8 @@ $("#sidebd-placeholder").load("sidebarDocente.html");
 </div>
 <script src="../scripts/verificarSesionDocente.js"></script>
 <script src="../scripts/asignarNotasFinales.js"></script>
-<script src="../scripts/verificarSesion.js"></script>
+<script src="../scripts/recuperarAlumnosNotasFinales.js"></script>
+<!-- <script src="../scripts/verificarSesion.js"></script> -->
 
 
 </body>
