--- a/public/empresaEstudiante.html
+++ b/public/empresaEstudiante.html
@@ -89,7 +89,7 @@ $("#nav-placeholder").load("navbar.html");
                 <p>nuevo rol:</p>
                   <select name="nuevoRol" >
                     <option value="estudiante">estudiante</option>
-                    <option value="desarrollador">estudiante</option>
+                    <option value="desarrollador">desarrollador</option>
                     <option value="documentador">documentador</option>
                   </select>
                 <br>
