--- a/public/crearTarea.html
+++ b/public/crearTarea.html
@@ -104,7 +104,7 @@ $(function(){
 </div>
 </div>
 </div>
-<script src="../scripts/verificarSesion.js"></script>
+<!-- <script src="../scripts/verificarSesion.js"></script> -->
 <script src="../scripts/verificarSesionDocente.js"></script>
 
 
