correccion bugs firebase

--- a/public/formularioConvocatorias.html
+++ b/public/formularioConvocatorias.html
@@ -46,7 +46,7 @@ $(function(){
 
     <div id="div-btn-editar-invi" hidden="true">
        <h2 class="mensaje-rojo">ya se publico una invitacion para este semestre</h2>
-       <button type="button" id="btn-editar-invi" > editar </button>
+       <button type="button" id="btn-editar-invi" > Aceptar </button>
     </div>
 
     <div class="div-formulario" id="div-formulario-invi" hidden="true" >
