docente revisa los apuntes de sus grupos

--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -57,7 +57,7 @@
             <a href="./reporteNotas.html">Reporte de Notas</a>
             <a href="./docenteRevisaAsistencias.html">Resumen de asistencias</a>
             <a href="./infoGrupoEmpresas.html" class="sidebar-item">Ver grupo empresas</a>
-
+            <a href="./docenteRevisaApunte.html"> revisar apuntes</a>
             <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
   </div>
 </div>
