correccion de avisos de editar en pliego e invitacion

--- a/public/formularioPliego.html
+++ b/public/formularioPliego.html
@@ -43,7 +43,7 @@ $(function(){
     </header>
 
     <div id="div-btn-editar-plie" hidden="true" >
-        <h2 class="mensaje-rojo">ya se publico un pliego para este semestre</h2>
+        <h2 class="mensaje-rojo" class="aviso">ya se publico un pliego para este semestre, se modificara el contenido del pliego actual</h2>
          <button id="btn-editar-plie" type="button" >Aceptar</button>
     </div>
 
