--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -45,8 +45,8 @@
   <button class="dropbtn">≡</button>
   <div class="dropdown-content">
             <a href="./crearClase.html" class="sidebar-item">Crear una clase para el semestre actual</a>
-            <a href="./formularioConvocatorias.html" class="sidebar-item">Subir invitacion publica</a>
-            <a href="./formularioPliego.html" class="sidebar-item">Subir pliego especificaciones</a>
+            <a href="./formularioConvocatorias.html" class="sidebar-item">Subir/Editar invitacion publica</a>
+            <a href="./formularioPliego.html" class="sidebar-item">Subir/Editar pliego especificaciones</a>
             <a href="./docentelistaConvocatorias.html">revisar las convocatorias publicadas </a>
             <a href="./crearTarea.html" class="sidebar-item">Crear tarea</a>
             <a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">Crear un Grupo-Empresa</a> 
