--- a/public/formularioConvocatorias.html
+++ b/public/formularioConvocatorias.html
@@ -45,7 +45,7 @@ $(function(){
 
 
     <div id="div-btn-editar-invi" hidden="true">
-       <h2 class="mensaje-rojo">ya se publico una invitacion para este semestre</h2>
+       <h2 class="mensaje-rojo" class="aviso">ya se publico una invitacion para este semestre, se modificara el contenido de la invitacion actual</h2>
        <button type="button" id="btn-editar-invi" > Aceptar </button>
     </div>
 
