docente cambia el numero de integrantes de grupo

--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -53,7 +53,7 @@
             <a href="./DocenteRevisaGrupos.html" class="sidebar-item">Revisar grupos de la clase</a>
             <a href="./docenteCalificaGrupos.html" class="sidebar-item">Calificar grupos</a>
             <a href="./docenteCalificaNotasFinales.html">Asignar notas finales</a>
-
+            <a href="./DocenteRevisaCambiaMaximoGrupos.html">cambiar tamaño de los grupos</a>
             <a href="./reporteNotas.html">Reporte de Notas</a>
             <a href="./docenteRevisaAsistencias.html">Resumen de asistencias</a>
             <a href="./infoGrupoEmpresas.html" class="sidebar-item">Ver grupo empresas</a>
